# hoare

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  version.h
cmake/: HCompiler.cmake  HFindLibs.cmake
examples/: assignment.hoare
lib/: CMakeLists.txt
lib/ast/: CMakeLists.txt  node.cpp  node.h  types.cpp  types.h
lib/backend/: CMakeLists.txt  context.cpp  context.h  hoare.cpp  hoare.h  printer.h  types.cpp
lib/codegen/: CMakeLists.txt  blocks.cpp  blocks.h  builtins.cpp  builtins.h  context.cpp  context.h  emitter.cpp  emitter.h  hoare.cpp  hoare.h  printer.cpp  printer.h
lib/parser/: CMakeLists.txt  driver.cpp  driver.h  lexer.cpp  lexer.h  node.cpp  node.h  parser.cpp  parser.h  parser.y  problem.cpp  problem.h  scanner.cpp  scanner.h
lib/utils/: CMakeLists.txt  defines.h  problem.cpp  problem.h
misc/: hoare.1.in  hoare.xml
test/: test
test/expected/: .gitignore  basic_declaration.txt  empty.txt  error_unterminated_string.txt  printf.hoare
test/files/: basic_declaration.hoare  error_unterminated_string.hoare  printf.hoare
